@@ -1,4 +1,5 @@
-07052013 -> jonnyboy -> added formatting to numbers in safe backfill
+07052013 -> jonnyboy -> a little cleanup, removed optimize/patch from tmux-edit
+						added formatting to numbers in safe backfill
 						tmux - split pp addtional and pp nfo
 						added partrepair threaded
 						added remove stale folders from threaded pp additional
